# OntoAligner

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTANANCE.md  README.md  mkdocs.yml  pyproject.toml  readthedocs.yml  requirements.sh  requirements.txt  setup.py
.github/workflows/: python-publish.yml  readthedocs-build.yml  test-os-compatibility.yml  test-package.yml
assets/MI-MatOnto/: matchings.xml  matonto_ontology.xml  mi_ontology.xml
assets/bank-fibo/: reference_matchings.xml  source_bank_corporate_actions.rdf
assets/cmt-conference/: reference.xml
assets/e-commerce/: amazon.owl  ebay.owl
assets/flora-mini-set/: mini1.ttl  mini2.ttl
assets/mouse-human/: reference.xml  source.xml  target.xml
docs/: base.md  encoder.md  index.html  index.md  requirements.txt
docs/source/: conf.py  fewshot.rst  fuzzy.rst  incontextvectors.rst  index.rst  installation.rst  introduction.rst  lightweight.rst  ontology.rst  ontology_matchers.rst  retriever.rst
examples/: OntoAlignerPipeline-Exp.ipynb  README.md  aligner_pipeline.py  ecommerce_product_alignment.py  enriched_encoder_generic.py  ensemble.py  fewshot_rag.py  fewshot_rag_matching.py  flora.py  flora_matching.py  fuzzy_matching.py  fuzzy_matching_using_pipeline.py  icv_rag_matching.py  kge.py  llm.py  llm_matching.py  olala.py  rag.py  rag_matching.py  reranking.py  retriever_matching.py
examples/property_alignment/: lightweight.py  parser_encoder.py  propmatch.py  propmatch_llm.py  propmatch_rag.py  retrieval.py
examples/usecase/: ecommerce_product_alignment.py  financial_corporate_actions_alignment.ipynb
ontoaligner/: __init__.py  pipeline.py
ontoaligner/aligner/: __init__.py
ontoaligner/base/: __init__.py  dataset.py  encoder.py  model.py  ontology.py  rerank.py
ontoaligner/encoder/: __init__.py  encoders.py  fewshot.py  flora.py  graph.py  kg.py  lightweight.py  llm.py  naivconvoaei.py  property.py  rag.py
ontoaligner/evaluation/: evaluator.py  metrics.py
ontoaligner/ontology/: __init__.py  anatomy.py  biodiv.py  bioml.py  commonkg.py  fibo.py  flora.py  food.py  generic.py  kg.py  mse.py  phenotype.py  property.py  triple.py
ontoaligner/ontology_matchers/: __init__.py
ontoaligner/pipeline/: om_pipeline.py
ontoaligner/postprocess/: __init__.py  label_mapper.py  process.py  util.py
ontoaligner/tools/: workdir.py
ontoaligner/utils/: io.py  metrics.py  xmlify.py
tests/: conftest.py  test_encoder.py  test_ontology.py
tests/aligners/: test_ensemble_aligner.py  test_flora_aligner.py  test_kge.py  test_lightweight_aligner.py  test_olala_aligner.py  test_propmatch.py  test_rag_advanced.py  test_rag_aligner.py  test_reranking.py
tests/data/: test-case1.owl
tests/label_mapper/: test_label_mapper.py
tests/ontologies/: test_generic_ontology.py  test_ontology.py  test_ontology_advanced.py
tests/pipeline/: test_pipeline.py  (+1 more)
trash/: configs.py
tutorial/: 01-quick-introduction-to-ontoaligner.ipynb  02-deep-dive-into-ontoaligner-modules-1.ipynb  03-deep-dive-into-ontoaligner-modules-2.ipynb  README.md
(+140 files in other folders)
